added: full layout = no responsive

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,6 +36,48 @@
             <p class="sub-title"><img src="/portfolio/assets/globe.svg" alt="Website Icon" class="icon-links" />https://rocketseat.com.br/</p>
             <p class="sub-title"><img src="/portfolio/assets/mail.svg" alt="E-Mail Icon" class="icon-links" />bbeadobruski@gmail.com</p>
           </div>
+
+          <div class="experiences pattern">
+            <h2>Experiências</h2>
+            <div class="glossary">
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - Atualmente</dd>
+                <dd>Community Experience</dd>
+              </dl>
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - Atualmente</dd>
+                <dd>Community Experience</dd>
+              </dl>
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - Atualmente</dd>
+                <dd>Community Experience</dd>
+              </dl>
+            </div>
+          </div>
+
+          <div class="education pattern">
+            <h2>Educação</h2>
+            <div class="glossary">
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - 2019</dd>
+                <dd>Go Stack</dd>
+              </dl>
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - 2019</dd>
+                <dd>Discover</dd>
+              </dl>
+              <dl>
+                <dt>&#8226;<strong>Rocketseat</strong></dt>
+                <dd>2019 - 2019</dd>
+                <dd>Ignite Pro</dd>
+              </dl>
+            </div>
+          </div>
         </aside>
 
         <section>
@@ -47,7 +89,7 @@
           <div class="folders">
             <div class="cards">
               <div class="card pattern">
-                <p class="sub-title"><img src="/portfolio/assets/folder.svg" alt="Folder Icon" class="folder-icon" />my-onix</p>
+                <p class="sub-title"><img src="/portfolio/assets/folder.svg" alt="Folder Icon" class="folder-icon" /> my-onix</p>
 
                 <p class="sub-title">Consulte os códigos de erro que aparecem no painel do veículo Onix.</p>
 
@@ -82,10 +124,29 @@
           </div>
 
           <div class="posts pattern">
-            <h3 class="title">Recent Post's</h3>
+            <h3 class="title">Recent Posts</h3>
           </div>
 
-          <div class="asks pattern"></div>
+          <div class="asks pattern">
+            <div class="image">
+              <img src="https://avatars.githubusercontent.com/u/81274077?s=400&u=9b91b00dff7a7c089939c40a5f5d3a8c27c8a758&v=4" alt="Profile Picture" />
+            </div>
+
+            <div class="text">
+              <h2>Erro adb devices no Genymotion e Android Studio (React Native)</h2>
+
+              <small>1 ano atrás</small>
+
+              <p>Erro adb devices no Genymotion e Android Studio (React Native)</p>
+
+              <div class="tags">
+                <p>#react-native</p>
+                <p>#genimotion</p>
+                <p>#javascript</p>
+                <p>#cms</p>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
