added: tech's card

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,6 +37,21 @@
             <p class="sub-title"><img src="/portfolio/assets/mail.svg" alt="E-Mail Icon" class="icon-links" />bbeadobruski@gmail.com</p>
           </div>
 
+          <div class="techs pattern">
+            <h2>Tecnologias</h2>
+            <div class="grid">
+              <p class="tech-btn">javascript</p>
+              <p class="tech-btn">reactjs</p>
+              <p class="tech-btn">nodejs</p>
+              <p class="tech-btn">git</p>
+              <p class="tech-btn">github</p>
+              <p class="tech-btn">html</p>
+              <p class="tech-btn">css</p>
+              <p class="tech-btn">elixir</p>
+              <p class="tech-btn">go</p>
+            </div>
+          </div>
+
           <div class="experiences pattern">
             <h2>Experiências</h2>
             <div class="glossary">
