added: rocketcoffee challenge, not finished yet

--- a/countdown/index.html
+++ b/countdown/index.html
@@ -11,15 +11,23 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1>Ready to launch in...</h1>
-
-          <div class="hours">
-            <p>Dias Horas Minutos Segundos</p>
-            <p id="hour"></p>
+          <div class="top-img">
+            <img src="/countdown/images/top-image.svg" alt="" />
           </div>
+          <div class="text">
+            <h1>Ready to launch in...</h1>
 
-          <p>Inscreva-se para saber mais sobre o lançamento</p>
-          <button><a href="#">Inscreva-se</a></button>
+            <div class="hours">
+              <p>Dias Horas Minutos Segundos</p>
+              <div class="time">
+                <p>08 : 12 : 44 : 28</p>
+              </div>
+              <p id="hour"></p>
+            </div>
+
+            <p>Inscreva-se para saber mais sobre o lançamento</p>
+            <button><a href="#">Inscreva-se</a></button>
+          </div>
 
           <img src="/countdown/images/rocket.svg" alt="" />
         </div>
